Added CV and edited home page text

--- a/Personal website.html
+++ b/Personal website.html
@@ -14,7 +14,7 @@
                 <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="About page.html">About</a></li>
-                <li><a href="#">CV</a></li>
+                <li><a href="CV November 2021.pdf" target="_blank">CV</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="https://github.com/oliverlee96">GitHub</a></li>
                 </ul>
@@ -31,10 +31,11 @@
                 <p>
                     <figure>
                         <img class = "selfportrait" src="self_picture.jpg" alt="Self portrait" width="300">
-                        </figure>
-                    Thanks for visiting my website. In the summer of 2021 I started teaching myself HTML and CSS to create this website. I wanted to showcase what I've learnt, and give you a slightly more interactive way of getting to know me and my skills.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut diam. In ante metus dictum at tempor commodo ullamcorper a lacus. Vestibulum sed arcu non odio euismod. Id interdum velit laoreet id donec ultrices tincidunt arcu. Consectetur a erat nam at lectus. Eu volutpat odio facilisis mauris sit amet massa vitae tortor. Cursus euismod quis viverra nibh cras pulvinar. Arcu dui vivamus arcu felis bibendum. Fames ac turpis egestas integer eget aliquet nibh praesent tristique. Lectus arcu bibendum at varius. Eget egestas purus viverra accumsan in. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt. Euismod quis viverra nibh cras pulvinar mattis nunc sed. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat velit. Nisi vitae suscipit tellus mauris. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut diam. In ante metus dictum at tempor commodo ullamcorper a lacus. Vestibulum sed arcu non odio euismod. Id interdum velit laoreet id donec ultrices tincidunt arcu. Consectetur a erat nam at lectus. Eu volutpat odio facilisis mauris sit amet massa vitae tortor. Cursus euismod quis viverra nibh cras pulvinar. Arcu dui vivamus arcu felis bibendum. Fames ac turpis egestas integer eget aliquet nibh praesent tristique. Lectus arcu bibendum at varius. Eget egestas purus viverra accumsan in. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt. Euismod quis viverra nibh cras pulvinar mattis nunc sed. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat velit. Nisi vitae suscipit tellus mauris.
-                
+                    </figure>
+                    <p>Thanks for visiting my website. In the summer of 2021 I started teaching myself HTML and CSS to create this website. I wanted to showcase what I've learnt, and give you a slightly more interactive way of getting to know me and my skills.
+                     Note: This is still a work in progress.</p>
+                    <p>Please take a look around. You'll find some more about my work experience, hobbies, and links to my portfolio and socials.</p>
+                    <p>Thanks for visiting!</p>
                 </p>
             </div>
         </div>
