--- a/About page.html
+++ b/About page.html
@@ -2,6 +2,7 @@
 <html>
     <head> 
         <title>About</title>
+        <link rel="stylesheet" type="text/css" href="About page styles.css" />
     </head>
 
 </html>
