--- a/Personal website.html
+++ b/Personal website.html
@@ -16,7 +16,7 @@
                 <li><a href="About page.html">About</a></li>
                 <li><a href="CV November 2021.pdf" target="_blank">CV</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="https://github.com/oliverlee96">GitHub</a></li>
+                <li><a href="https://github.com/oliverlee96" target="_blank">GitHub</a></li>
                 </ul>
             </nav>
         </header>
